--- a/meta_text.tex
+++ b/meta_text.tex
@@ -36,7 +36,7 @@
 
 % 关键词，中文。用全角分号「；」分割
 % 研究生的应首先从《汉语主题词表》中摘选
-\ckeywords{自然场景文字检测；文字边缘骨架检测子；统计边缘响应；基于二叉树搜索的文本行定位矫正}
+\ckeywords{场景文字检测；边缘骨架检测子；统计边缘响应；文本行定位矫正}
 
 % 提交日期，本科生不需要
 \cproddate{\the\year 年\the\month 月}
@@ -59,7 +59,7 @@
 \esupervisor{Senior Engineer Yonghong Song }
 
 % 关键词，英文。用半角分号和一个半角空格「; 」 分割
-\ekeywords{Scene text detection; Skeleton-cut text detector; Static edge response; Text line location rectification by binary-tree-search}
+\ekeywords{Scene text detection; Skeleton-cut detector; Static edge response; Text line rectification}
 
 % 学科门类，英文
 % 从Philosophy（哲学）、Economics （经济学）、Law （法学）、Education （教育学）、Arts（文学）、
