--- a/pages/achievements_text.tex
+++ b/pages/achievements_text.tex
@@ -25,19 +25,13 @@
 
 [2]宋永红,贺翔,张元林.一种用以增强文字与背景差异的边缘响应统计变换方法[P].中国发明专利,申请号:2016108503972
 
-[3]He Xiang, Song Yonghong, Zhang Yuanlin. Scene Text Detection based on Statistic Edge Response and MSER, 25th National Conference on Multimedia Technology(NCMT),2016.
+[3]He X, Song Y, Zhang Y. Scene text detection based on skeleton-cut detector[C]// IEEE International Conference on Image Processing. IEEE, 2017:3375-3379.
 
-[4]He Xiang, Song Yonghong, Zhang Yuanlin. Scene Text Detection based on Skeleton-cut Detector, 24th International Conference on Image Processing(ICIP),2017.
-
-[5]He Xiang, Song Yonghong, Zhang Yuanlin. A coarse-to-fine scene text detection method based on Skeleton-cut detector and Binary-Tree-Search based rectification, Pattern Recognition Letters, 2018已投稿
+[4]He X, Song Y, Zhang Y. A coarse-to-fine scene text detection method based on Skeleton-cut detector and Binary-Tree-Search based rectification[J]// Pattern Recognition Letters.(SCI源刊)(一审中)
 
 
 
-【参与项目】
 
-[1]海尔智能冰箱中的容器包装文字识别项目(2017.6 - 2017.12) 项目组长
-
-本项目目标是在低分辨率冰箱摄像头拍摄的图片中，检测并识别出食品包装上的有用信息。首先利用基于深度网络的目标检测方法来定位文字，然后采用CRNN模型对定位到的文字进行识别，此外引入基于ReID的图像匹配算法来辅助提升识别效果。本人负责完成的工作有：制订工作计划、调研相关工作、仿真算法、制作数据集、实现算法、设计和搭建系统平台、做实验测试结果、调试系统以及在每个阶段撰写技术报告。
 
 
 
