--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -52,7 +52,7 @@
     \label{fig.c2_wangtao_cnn}
     \end{figure}
 
-    Wang等\cite{Wang2012End} 设计的端对端文字检测和识别框架的核心即是卷积神经网络CNN。 该方法首先利用滑动窗在图像金字塔上扫描得到候选文字图像块区域，然后将这些图像块区域缩放成$32\times32$ 像素大小的正方形小图块。接着这些图块的灰度图会输入到1 个训练好的，含有2 层卷积的CNN 网络中进行特征的提取，以及对这些图块区域的分类。其中，卷积神经网络CNN的结构如图\ref{fig.c2_wangtao_cnn} 所示：输入图像小块经过第1层的64 个卷积模板的卷积操作后，得到64个$25\times25$的响应图，紧接着再执行平均池化获得相应的$5\times5$ 的响应；然后再通过第2 卷积层中的128 个卷积模板的卷积操作及后续的平均池化操作后，得到$2\times2\times128$ 的全连接层。在通过上CNN 网络的特征提取和分类后，最后再利用非极大抑制NMS 操作来筛选重叠的分类结果以获得文字行定位结果。此外还构建62类的分类器来识别图块中的文字。
+    Wang等\cite{Wang2012End} 设计的端对端文字检测和识别框架的核心即是卷积神经网络CNN。 该方法首先利用滑动窗在图像金字塔上扫描得到候选文字图像块区域，然后将这些图像块区域缩放成$32\times32$ 像素大小的正方形小图块。接着这些图块的灰度图会输入到1 个训练好的，含有2 层卷积的CNN 网络中进行特征的提取，以及对这些图块区域的分类。其中，卷积神经网络CNN的结构如图\ref{fig.c2_wangtao_cnn} 所示：输入图像小块经过第1层的64 个卷积模板的卷积操作后，得到64 个$25\times25$的响应图，紧接着再执行平均池化获得相应的$5\times5$ 的响应；然后再通过第2 卷积层中的128 个卷积模板的卷积操作及后续的平均池化操作后，得到$2\times2\times128$ 的全连接层。在通过上CNN 网络的特征提取和分类后，最后再利用非极大抑制NMS 操作来筛选重叠的分类结果以获得文字行定位结果。此外还构建62类的分类器来识别图块中的文字。
 
     \begin{figure*}[!h]
     \centering
@@ -79,10 +79,11 @@
     Zhang等\cite{Zhang2015Symmetry} 提出一种利用滑动窗提取对称性特征的文字检测算法。该方法首先设计1 个对称性计算模板来计算滑动窗口内区域的梯度直方图、局部二值模式LBP 以及颜色等特征的相似度，然后将这些特征输入随机森林分类器从而得到每个像素属于文本行对称轴的概率图。接着把概率图上概率相近的像素集中形成文本行对称轴并用CRF 进行更准确的分类。然后在此基础上利用窗口尺寸生成候选文本行并作多个尺度上的文本行的投影融合。最后采用训练好的CNN 分类器去掉非文字的图像区域。从这个方法的实验结果来看，利用深度学习来分类候选文本行区域，可将其中真实的文字部分精准的辨别出来，因而能较大程度的提高文本检测的成绩。
 
     \begin{table*}[!h]
+    %\renewcommand\arraystretch{1.5}
     \centering
     \caption{基于区域的相关文字检测方法}
     %\small
-    \begin{tabular}{p{0.17\textwidth} p{0.1\textwidth} p{0.63\textwidth}}
+    \begin{tabular}{p{0.17\textwidth} p{0.12\textwidth} p{0.63\textwidth}}
     %\hline
     \toprule
     作者 & 年份 & 方法概述 \\
@@ -154,10 +155,11 @@
     接下来Neumann又在方法\cite{Neumann2012Real} 中反过来利用极值区域ER取代MSER 以提取候选文字的连通部件，这是因为MSER 对于一些模糊或光照过强的场景太敏感而漏检掉了候选文字部件，但ER 却可以尽可能多的考虑到所有的连通部件，因为ER 本来涵盖了MSER 中所有的结果。生成ER 树的过程如图\ref{fig.c2_er_tree}(b)所示，其原理类似于图\ref{fig.c2_er_tree}(a)的分水岭算法。在这类算法中，主要是利用ER树提取候选的文字部件，然后求取连通部件的空洞面积、欧拉数、水平交叉数目以及紧密度等特征，来训练SVM 分类器以分类背景和文字。最后通过穷举搜索以将保留下来的连通部件排列成单词结果。
 
     \begin{table*}[!h]
+    %\renewcommand\arraystretch{1.5}
     %\small
     \centering
     \caption{基于连通部件的相关文字检测方法}
-    \begin{tabular}{p{0.17\textwidth} p{0.1\textwidth} p{0.63\textwidth}}
+    \begin{tabular}{p{0.17\textwidth} p{0.12\textwidth} p{0.63\textwidth}}
     %\hline
     \toprule
     作者 & 年份 & 方法概述 \\
@@ -173,7 +175,7 @@
     \label{tab.c2_connected_component_based}
     \end{table*}
 
-    表格\ref{tab.c2_connected_component_based} 总结了基于连通部件的相关文字检测方法。基于连通部件的方法来提取候选文字的计算量要远远低于基于滑动窗的方法，因此这类方法的处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但基于连通部件的方法在曝光或低对比度环境中难以从背景中分离出连通区域，并且过于依赖图像分割算法的结果。Neumann 等\cite{Neumann2010A,Neumann2011Text,Neumann2012Real} 提出的MSER是其中的一大主流方法，该方法取得了不错的文字检测效果。但MSER 也存在一些问题，如遭遇反光问题会失效、提取ER 时的重复和嵌套问题、以及过滤ER 时的固定阈值问题。因此目前在利用MSER 时大多先用一些其它方法作预处理以提高文字检测算法的鲁棒性。另一类主流的方法是如Yu 等\cite{Yu2016Scene} 提出的基于边缘的文字检测框架。这类方法比较依赖边缘检测的效果，因此还用Dollar 等\cite{Dollar2015Fast} 提出的结构化边缘检测子取代了常用的Canny 边缘检测算法。通过分析发现基于边缘的文字检测的最核心的问题是：若存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。
+    表格\ref{tab.c2_connected_component_based} 总结了基于连通部件的相关文字检测方法。基于连通部件的方法来提取候选文字的计算量要远远低于基于滑动窗的方法，因此这类方法的处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但基于连通部件的方法在曝光或低对比度环境中难以从背景中分离出连通区域，并且过于依赖图像分割算法的结果。Neumann 等\cite{Neumann2010A,Neumann2011Text,Neumann2012Real} 提出的MSER 是其中的一大主流方法，该方法取得了不错的文字检测效果。但MSER 也存在一些问题，如遭遇反光问题会失效、提取ER 时的重复和嵌套问题、以及过滤ER 时的固定阈值问题。因此目前在利用MSER 时大多先用一些其它方法作预处理以提高文字检测算法的鲁棒性。另一类主流的方法是如Yu 等\cite{Yu2016Scene} 提出的基于边缘的文字检测框架。这类方法比较依赖边缘检测的效果，因此还用Dollar 等\cite{Dollar2015Fast} 提出的结构化边缘检测子取代了常用的Canny 边缘检测算法。通过分析发现基于边缘的文字检测的最核心的问题是：若存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。
 
     \section{本章小结}
     \esection{Brief Summary}
