--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -43,12 +43,12 @@
     \label{fig.c4_overlap}
     \end{figure*}
 
-    针对上述问题，本章提出一种基于二叉树搜索的文本行定位优化框架，用来调整候选文字包围盒与ground truth 的重叠率以提升文字检测和识别效果。该框架包含3个步骤：第1步是对所有的候选文字包围盒进行统计边缘响应（Static Skeleton-box Response，简称SSR 算法），然后对计算得到的SSR求取梯度并执行NMS操作，以获得候选文本行；第2 步是将候选文本行的所有可能的排列组合方式构建成一个二叉树型搜索空间；第3步是仿照二叉树的后续遍历算法从搜索空间中找到一条最优路径，该路径对应着优化后的文字定位包围盒。值得注意的是在搜索最优文字定位的过程中还利用到了文字识别的结果，而经过该算法调优后的文字定位结果又进一步提升识别文字的精度。本章接下来内容会详细论述这一优化框架。
+    针对上述问题，本章提出一种基于二叉树搜索的文本行定位优化框架，用来调整候选文字包围盒与ground truth 的重叠率以提升文字检测和识别效果。该框架包含3个步骤：第1步是对所有的候选文字包围盒进行统计边缘响应（Static Skeleton-box Response，简称SSR 算法），然后对计算得到的SSR 求取梯度并执行NMS操作，以获得候选文本行；第2 步是将候选文本行的所有可能的排列组合方式构建成一个二叉树型搜索空间；第3 步是仿照二叉树的后续遍历算法从搜索空间中找到一条最优路径，该路径对应着优化后的文字定位包围盒。值得注意的是在搜索最优文字定位的过程中还利用到了文字识别的结果，而经过该算法调优后的文字定位结果又进一步提升识别文字的精度。本章接下来内容会详细论述这一优化框架。
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
 
-    基于二叉树搜索的文本行定位优化方法的步骤示意如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene} 来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b)中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c)中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
+    基于二叉树搜索的文本行定位优化方法的步骤示意如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene} 来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b) 中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c) 中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
 
     \begin{figure*}[!h]
     \centering
@@ -229,7 +229,7 @@
         \subsection{搜索路径}
         \esubsection{Searching the paths}
 
-        给定二叉树型搜索空间$N$,假设$N$ 是由$m$ 个结点$n$ 构成，那么通过表\ref{tab.c4_algori_bts}中的算法，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$ 都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$ 和右子结点$nr_i$。
+        给定二叉树型搜索空间$N$,假设$N$ 是由$m$ 个结点$n$ 构成，那么通过表\ref{tab.c4_algori_bts} 中的算法，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$ 都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$ 和右子结点$nr_i$。
 
     \begin{table}[!h]
     \renewcommand\arraystretch{1.5}
@@ -260,9 +260,9 @@
     \end{tabular}
     \end{table}
 
-        该算法的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$ 个结点，那么算法就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$ 中寻找能赋予路径三元组中左子结点$nl_i$ 的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1] 须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。 那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$ 设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
+        该算法的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$ 个结点，那么算法就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$ 中寻找能赋予路径三元组中左子结点$nl_i$ 的1 个结点$n_x$，该结点必须满足下述条件：$n_x$ 的范围的左边界$nr_x$[1] 须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。 那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$ 设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
 
-        以上过程是本算法的第i次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$ 个三元组$p$的路径集合$P$ 就被构建了出来。
+        以上过程是本算法的第i次迭代。那么经过$(m-1)/2$ 次迭代后，包含$(m-1)/2$ 个三元组$p$ 的路径集合$P$ 就被构建了出来。
 
         \begin{figure*}[!h]
         \centering
@@ -298,9 +298,9 @@
 
         \begin{figure*}[!h]
         \centering
-        \includegraphics[width=\textwidth]{./figures/c4_search_strategy1.jpg}
+        \includegraphics[width=0.8\textwidth]{./figures/c4_search_strategy1.jpg}
         \centerline{\small (a) 1个被搜索到的路径三元组：其中每个结点代表1个候选文本行区域 }
-        \includegraphics[width=0.9\textwidth]{./figures/c4_search_strategy2.jpg}
+        \includegraphics[width=0.8\textwidth]{./figures/c4_search_strategy2.jpg}
         \centerline{\small (b) 对路径三元组的剪枝或融合策略}
         \caption{ 1个搜索策略的示例}
         \label{fig.c4_search_strategy}
@@ -318,7 +318,7 @@
 
         为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13) 测试数据集上都运行并得到了结果。其中IC03，IC11和IC13 各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
 
-        最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
+        最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249 张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
 
         用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object} 提出的Object/area graphs 方法。其中对文字检测查全和查准率的计算公式\ref{eq:c4_eval} 所示：
 
@@ -335,13 +335,14 @@
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
-        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013 上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\%的检测F 值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
+        如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013 上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\% 的检测F 值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
 
         %值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN 的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013 的数据集中，平均的图像尺寸大约是1200 乘以900 个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。
 
         此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
 
         \begin{table*}[!h]
+        %\renewcommand\arraystretch{1.5}
         %\small
         \centering
         \caption{在ICDAR 2013上的文字检测效果(\%)}
@@ -368,6 +369,7 @@
         如表\ref{tab.c4_icdar11}所示，在ICDAR 2011 文字测试数据集上，本章提出的基于二叉树搜索的文字检测方法与上一章提出的He\cite{He2017scene} 的方法，以及其它最先进的的文字检测方法如Cho\cite{Cho2016Canny}、Sung\cite{Sung2015Scene} 等的方法都进行了字符提取数目和检出率的量化对比。从实验结果上来看，本章提出的方法可以在获得最高文字检出率的同时，保证提取的字符数目最少。该实验说明表明，相对于其它先进文字检测方法而言，本章方法都达到更优的文字查全和查准效果的折衷。
 
         \begin{table*}[!h]
+        %\renewcommand\arraystretch{1.5}
         %\small
         \centering
         \caption{在ICDAR 2011测试集上对于字符提取数目和检出率的测评}
@@ -401,9 +403,10 @@
 
         在第\ref{sec.c4_searching strategies} 节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
 
-        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50 数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77 的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\% 左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50 数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F 值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77 的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\% 左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
 
         \begin{table*}[!h]
+        %\renewcommand\arraystretch{1.5}
         %\small
         \centering
         \caption{本章提出方法与其它先进方法的端对端文字识别成绩}
@@ -428,7 +431,7 @@
         \label{tab.c4_recognition}
         \end{table*}
 
-        对于表\ref{tab.c4_recognition} 中那些不含词典(lexicon) 的文字图片数据集，同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\% 的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11 和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT 数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
+        对于表\ref{tab.c4_recognition} 中那些不含词典(lexicon) 的文字图片数据集，同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT 数据集上，本方法分别获得77\%和55\% 的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT 数据集上有一定的提升，而在ICDAR11 和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT 数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
 
         \begin{figure}[!h]
         \centering
